--- a/index.html
+++ b/index.html
@@ -12,71 +12,70 @@
     <script defer src="scripts/app.js"></script>
   </head>
   <body>
-    <div class="container">
-      <div class="sidebar">
-        <div
-          style="
-            background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);
-          "
-        >
-          <h1>Snow in the desert</h1>
-          <p>Love, death & robots</p>
-        </div>
-        <div
-          style="
-            background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);
-          "
-        >
-          <h1>Life Hutch</h1>
-          <p>Love, death & robots</p>
-        </div>
-        <div
-          style="
-            background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);
-          "
-        >
-          <h1>Zima Blue</h1>
-          <p>Love, death & robots</p>
-        </div>
-        <div
-          style="
-            background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);
-          "
-        >
-          <h1>Automated Customer Service</h1>
-          <p>Love, death & robots</p>
-        </div>
+    <section class="slider">
+      <h1 class="slider__title visually-hidden">
+        Слайдер картинок с надписями
+      </h1>
+      <div class="slider__sidebar sidebar">
+        <ul class="sidebar__list">
+          <li class="sidebar__item sidebar__item--first">
+            <h2 class="sidebar__title">Snow in the desert</h2>
+            <p class="sidebar__info">Love, death & robots</p>
+          </li>
+          <li class="sidebar__item sidebar__item--second">
+            <h2 class="sidebar__title">Life Hutch</h2>
+            <p class="sidebar__info">Love, death & robots</p>
+          </li>
+          <li class="sidebar__item sidebar__item--third">
+            <h2 class="sidebar__title">Zima Blue</h2>
+            <p class="sidebar__info">Love, death & robots</p>
+          </li>
+          <li class="sidebar__item sidebar__item--fourth">
+            <h2 class="sidebar__title">Automated Customer Service</h2>
+            <p class="sidebar__info">Love, death & robots</p>
+          </li>
+        </ul>
       </div>
-      <div class="main-slide">
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
-          "
-        ></div>
-        <div
-          style="
-            background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');
-          "
-        ></div>
+      <div class="slider__main-slide main-slide">
+        <ul class="main-slide__list">
+          <li class="main-slide__item">
+            <img
+              src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80"
+              alt="желтый хаб с людьми"
+              class="main-slide__image"
+            />
+          </li>
+          <li class="main-slide__item">
+            <img
+              src="https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80"
+              alt="лабиринт"
+              class="main-slide__image"
+            />
+          </li>
+          <li class="main-slide__item">
+            <img
+              src="https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
+              alt="человек в красном"
+              class="main-slide__image"
+            />
+          </li>
+          <li class="main-slide__item">
+            <img
+              src="https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80"
+              alt="человек с балончиком красок"
+              class="main-slide__image"
+            />
+          </li>
+        </ul>
       </div>
-      <div class="controls">
-        <button class="down-button">
-          <i class="fas fa-arrow-down"></i>
+      <div class="slider__controls controls">
+        <button class="controls__button controls__down-button--down">
+          <span class="fas fa-arrow-down"></span>
         </button>
-        <button class="up-button">
-          <i class="fas fa-arrow-up"></i>
+        <button class="controls__button controls__down-button--up">
+          <span class="fas fa-arrow-up"></span>
         </button>
       </div>
-    </div>
+    </section>
   </body>
 </html>
