--- a/index.html
+++ b/index.html
@@ -40,30 +40,34 @@
         <ul class="main-slide__list">
           <li class="main-slide__item">
             <img
-              src="https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80"
-              alt="желтый хаб с людьми"
+              src="https://images.unsplash.com/photo-1669764721666-915960e73e0d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80"
+              alt="фото ночного неба"
               class="main-slide__image"
+              loading="lazy"
             />
           </li>
           <li class="main-slide__item">
             <img
-              src="https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80"
-              alt="лабиринт"
+              src="https://images.unsplash.com/photo-1669639613055-7c5a1b28eddd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1965&q=80"
+              alt="река с лодкой посередине"
               class="main-slide__image"
+              loading="lazy"
             />
           </li>
           <li class="main-slide__item">
             <img
-              src="https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80"
-              alt="человек в красном"
+              src="https://images.unsplash.com/photo-1669658500479-a18092b391d0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1978&q=80"
+              alt="календарь"
               class="main-slide__image"
+              loading="lazy"
             />
           </li>
           <li class="main-slide__item">
             <img
-              src="https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80"
-              alt="человек с балончиком красок"
+              src="https://images.unsplash.com/photo-1669635449285-7b7502cf8692?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1965&q=80"
+              alt="машина на дороге, по бокам лес"
               class="main-slide__image"
+              loading="lazy"
             />
           </li>
         </ul>
